# fluvio-smartmodule-template

./: Cargo.toml  README.md  cargo-generate.toml
src/: lib.rs
